k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svk-edu-deployment
  namespace: svk-demo
spec:
  selector:
    matchLabels:
      app: svk-edu
  replicas: 2
  template:
    metadata:
      labels:
        app: svk-edu
    spec:
      containers:
        - name: svk-edu
          image: svk1984/svk-edu:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /actuator/health
            initialDelaySeconds: 10
            periodSeconds: 5
