k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svk-edu-service
  namespace: svk-demo
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      name: http
  selector:
    app: svk-edu
